--- a/frontend/src/app/shared/grid/grid.component.scss
+++ b/frontend/src/app/shared/grid/grid.component.scss
@@ -1,5 +1,7 @@
 .app-grid {
-    .btn-create {
+    .add-group {
+        display: flex;
+        gap: 1rem;
         margin-bottom: 1rem;
     }
     .table {
