add frontend image upload

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,5 +4,6 @@
     <app-crud></app-crud>
     <app-sse></app-sse>
     <app-ws></app-ws>
+    <app-image-convertor></app-image-convertor>
   </div>
 </main>
