--- a/frontend/src/app/image-convertor/image-convertor.component.scss
+++ b/frontend/src/app/image-convertor/image-convertor.component.scss
@@ -5,4 +5,8 @@
         visibility: hidden;
         opacity: 0;
     }
+    .preview {
+        display: block;
+        margin-bottom: 1rem;
+    }
 }
